--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 </ul>
 <!-- <button (click)="GoogleAuth()">Login</button> -->
 <!-- <p *ngIf="user$ async as user">{{currentUser?.displayName}}</p> -->
+<button class="add-button" (click)="a2hs()">Add to Home Screen</button>
 <button (click)="enableNotification()">Enable Notifications</button>
 <button (click)="requestPushNotificationsPermission()">Permission Notifications</button>
 
